[tool.poetry]
name = "minesweeper"
version = "0.1.0"
description = ""
authors = ["magn3tism <chapagainsakshyam@gmail.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ttkbootstrap = "^1.10.1"
autopep8 = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
